--- a/kubernetes/apps/production/downloads/sabnzbd/kustomization.yaml
+++ b/kubernetes/apps/production/downloads/sabnzbd/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- media-namespace.yaml
-- bazarr
-- prowlarr
-- radarr
-- sonarr
+- sabnzbd-volume.yaml
+- sabnzbd-nfs-downloads.yaml
+- sabnzbd-deploy.yaml
