--- a/kubernetes/apps/production/media/bazarr/bazarr-deployment.yaml
+++ b/kubernetes/apps/production/media/bazarr/bazarr-deployment.yaml
@@ -68,6 +68,12 @@ spec:
           - key: entrypoint.sh
             path: entrypoint.sh
           defaultMode: 0755
+      - name: movies-volume
+        persistentVolumeClaim:
+          claimName: bazarr-movies-pvc
+      - name: tvshows-volume
+        persistentVolumeClaim:
+          claimName: bazarr-tvshows-pvc
       containers:
       - name: bazarr
         image: ghcr.io/k8s-at-home/bazarr
@@ -84,6 +90,10 @@ spec:
         - name: bazarr-entrypoint-sh
           mountPath: /app/entrypoint.sh
           subPath: entrypoint.sh
+        - name: movies-volume
+          mountPath: /media/movies
+        - name: tvshows-volume
+          mountPath: /media/tvshows
         securityContext:
           allowPrivilegeEscalation: false
 ---
