--- a/kubernetes/apps/production/media/bazarr/kustomization.yaml
+++ b/kubernetes/apps/production/media/bazarr/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - bazarr-volume.yaml
+- bazarr-nfs-movies.yaml
+- bazarr-nfs-tvshows.yaml
 - bazarr-deployment.yaml
