--- a/kubernetes/apps/production/media/radarr/kustomization.yaml
+++ b/kubernetes/apps/production/media/radarr/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- radarr-volume.yaml
+#- radarr-volume.yaml
 - radarr-nfs-downloads.yaml
 - radarr-nfs-movies.yaml
-- radarr-deploy.yaml
+#- radarr-deploy.yaml
