--- a/kubernetes/apps/production/media/sonarr/kustomization.yaml
+++ b/kubernetes/apps/production/media/sonarr/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#- sonarr-volume.yaml
+- sonarr-volume.yaml
 - sonarr-nfs-downloads.yaml
 - sonarr-nfs-tvshows.yaml
-#- sonarr-deploy.yaml
+- sonarr-deploy.yaml
