tweak longhorn node deletion policy
Force deletion of pods with storage on node that is down - otherwise manually need to delete pod

--- a/kubernetes/infrastructure/longhorn/longhorn-default-settings.yaml
+++ b/kubernetes/infrastructure/longhorn/longhorn-default-settings.yaml
@@ -10,3 +10,4 @@ data:
     default-data-locality: best-effort
     allow-volume-creation-with-degraded-availability: "false"
     replica-auto-balance: best-effort
+    node-down-pod-deletion-policy: delete-both-statefulset-and-deployment-pod
