--- a/kubernetes/infrastructure/downloads-vpn/nordvpn-secret.yaml
+++ b/kubernetes/infrastructure/downloads-vpn/nordvpn-secret.yaml
@@ -2,17 +2,17 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-nordvpn-secret
-  namespace: downloads
+  namespace: downloads-vpn
 spec:
   provider: azure
   secretObjects:
-  - secretName: transmission # k8s-secret-name
+  - secretName: nordvpn # k8s-secret-name
     type: Opaque
     data:
     - objectName: nordvpn-username # azure-key-name
-      key: nordvpn-username # k8s-key
+      key: username # k8s-key
     - objectName: nordvpn-password
-      key: nordvpn-password
+      key: password
   parameters:
     usePodIdentity: "false" # dont unhash or you get boolean errors!
     keyvaultName: ${AZURE_VAULT_NAME}
@@ -32,7 +32,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: azure-nordvpn-secret
-  namespace: downloads
+  namespace: downloads-vpn
 spec:
   replicas: 1
   selector:
