--- a/kubernetes/apps/production/downloads/kustomization.yaml
+++ b/kubernetes/apps/production/downloads/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - downloads-namespace.yaml
+- downloads-network-policy.yaml
 - sabnzbd
 - transmission
