--- a/kubernetes/apps/production/downloads/transmission/kustomization.yaml
+++ b/kubernetes/apps/production/downloads/transmission/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- transmission-volume.yaml
 - transmission-nfs-downloads.yaml
-- nordvpn-secret.yaml
 - transmission-deploy.yaml
