--- a/kubernetes/apps/production/media/kustomization.yaml
+++ b/kubernetes/apps/production/media/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - media-namespace.yaml
+- media-network-policy.yaml
 - bazarr
 - prowlarr
 - radarr
