--- a/kubernetes/infrastructure/downloads-vpn/kustomization.yaml
+++ b/kubernetes/infrastructure/downloads-vpn/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- k8s-at-home-charts.yaml
-- k8s-at-home-library.yaml
-- reloader.yaml
+  - namespace.yaml
+  - nordvpn-secret.yaml
+  - helm-release.yaml
