--- a/kubernetes/clusters/develop/apps-bazarr.yaml
+++ b/kubernetes/clusters/develop/apps-bazarr.yaml
@@ -1,18 +1,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps
+  name: apps-bazarr
   namespace: flux-system
 spec:
   interval: 10m0s
   dependsOn:
-    - name: helm
     - name: cluster-settings
     - name: infrastructure
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./kubernetes/apps
+  path: ./kubernetes/apps/media/bazarr
   prune: true
   wait: true
   timeout: 5m0s
