--- a/kubernetes/infrastructure/longhorn/kustomization.yaml
+++ b/kubernetes/infrastructure/longhorn/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- s3-backup-secret.yaml
 - longhorn-default-settings.yaml 
 - longhorn-ingress.yaml
 - longhorn-snapshot.yaml
+- longhorn-backups.yaml
