--- a/bare-metal/requirements.yml
+++ b/bare-metal/requirements.yml
@@ -1,6 +1,7 @@
 ---
 roles:
-  - src: xanmanning.k3s
-    version: v3.2.0
+  - name: xanmanning.k3s
+    src: https://github.com/PyratLabs/ansible-role-k3s.git
+    version: v3.3.0
   - src: nicholaswilde.flux2
     version: v1.0.11
