--- a/bare-metal/roles/flux/tasks/kubectl.yml
+++ b/bare-metal/roles/flux/tasks/kubectl.yml
@@ -23,12 +23,18 @@
     path: /tmp/kubeconfig
   register: result
 
+- name: Kubectl | Check if .kube folder exists
+  ansible.builtin.file:
+    path: '{{ home_path }}/.kube'
+    state: directory
+    mode: 0755
+
 - name: Kubectl | Updating config file
   ansible.builtin.copy:
     src: /tmp/kubeconfig
-    dest: '{{ kubectl_configpath }}/config'
+    dest: '{{ home_path }}/.kube/config'
     backup: true
-    mode: 0600 # originally 644
+    mode: 0644
   when:
     - result.stat.exists
     - (result.stat.isdir is undefined) or (not result.stat.isdir)
