--- a/kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
+++ b/kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
@@ -27,7 +27,7 @@ spec:
           claimName: prowlarr-volume-pvc
       containers:
       - name: prowlarr
-        image: ghcr.io/k8s-at-home/prowlarr-develop:v0.4.6.1969@sha256:100c4ec286ace70764cdb632c56d4b1e9f0ab619dfda9393395141ab3da960f8v0.4.6.1969@sha256:100c4ec286ace70764cdb632c56d4b1e9f0ab619dfda9393395141ab3da960f8
+        image: ghcr.io/k8s-at-home/prowlarr-develop:v0.4.6.1969@sha256:100c4ec286ace70764cdb632c56d4b1e9f0ab619dfda9393395141ab3da960f8
         ports:
         - containerPort: 9696
         env:
