feat: deploy jdownloader

--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
 - downloads-namespace.yaml
 - downloads-network-policy.yaml
+- jdownloader
 - sabnzbd
 - transmission
