--- a/kubernetes/apps/downloads/sabnzbd/sabnzbd-volume.yaml
+++ b/kubernetes/apps/downloads/sabnzbd/sabnzbd-volume.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sabnzbd-volume
   namespace: longhorn-system
 spec:
-  accessMode: rwx
+  accessMode: rwo
   engineImage: longhornio/longhorn-engine:v1.3.0
   frontend: blockdev
   replicaAutoBalance: best-effort
@@ -16,7 +16,7 @@ metadata:
   name: sabnzbd-volume-pv
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   capacity:
     storage: 512Mi
   csi:
@@ -34,7 +34,7 @@ metadata:
   namespace: downloads
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 512Mi
