--- a/kubernetes/clusters/develop/infrastructure.yaml
+++ b/kubernetes/clusters/develop/infrastructure.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   interval: 5m0s
   dependsOn:
+    - name: namespaces
     - name: helm 
     - name: cluster-settings
   sourceRef:
