chore: rename ingress files
Better distinguish between internal only and external facing ingresses

--- a/kubernetes/infrastructure/ingress/external-ingress.yaml
+++ b/kubernetes/infrastructure/ingress/external-ingress.yaml
@@ -1,3 +1,6 @@
+# ingress allowed to be accessed externally and internally
+# externally done via cloudflared
+---
 apiVersion: v1
 kind: Namespace
 metadata:
