--- a/kubernetes/infrastructure/ingress/kustomization.yaml
+++ b/kubernetes/infrastructure/ingress/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- internal.yaml
-- normal.yaml
+- internal-ingress.yaml
+- external-ingress.yaml
