--- a/kubernetes/settings/production/settings.yaml
+++ b/kubernetes/settings/production/settings.yaml
@@ -6,6 +6,8 @@ metadata:
 data:
   TIMEZONE: Australia/Perth
   DOMAIN_NAME: chickenwaffles.net
+  CLOUDFLARE_TUNNEL_DOMAIN: c4d0f34d-537a-499f-9497-7a7637d755ff.cfargotunnel.com
+
   METAL_LB_RANGE: 192.168.0.241-192.168.0.254
   INGRESS_EXTERNAL_IP: 192.168.0.241
   INGRESS_INTERNAL_IP: 192.168.0.242
