--- a/bare-metal/requirements.yml
+++ b/bare-metal/requirements.yml
@@ -5,3 +5,8 @@ roles:
     version: v3.3.0
   - src: nicholaswilde.flux2
     version: v1.0.11
+
+collections:
+  - name: ansible.posix
+    version: 1.4.0
+    source: https://galaxy.ansible.com
