fix: disable external-dns debug logging

--- a/kubernetes/infrastructure/external/external-dns-deploy.yaml
+++ b/kubernetes/infrastructure/external/external-dns-deploy.yaml
@@ -57,7 +57,7 @@ spec:
       - name: external-dns
         image: k8s.gcr.io/external-dns/external-dns:v0.12.2
         args:
-        - --log-level=debug
+        - --log-level=info
         - --source=service # ingress is also possible
         - --provider=cloudflare
         - --txt-owner-id=k8s-extdns
