--- a/kubernetes/infrastructure/ingress/external-ingress.yaml
+++ b/kubernetes/infrastructure/ingress/external-ingress.yaml
@@ -18,7 +18,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
   namespace: ingress-nginx
 ---
@@ -30,7 +30,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
   namespace: ingress-nginx
 ---
@@ -42,7 +42,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
   namespace: ingress-nginx
 rules:
@@ -130,6 +130,14 @@ rules:
   verbs:
   - create
   - patch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
+  - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -139,7 +147,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
   namespace: ingress-nginx
 rules:
@@ -158,7 +166,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
 rules:
 - apiGroups:
@@ -223,6 +231,14 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
+  - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -232,7 +248,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
 rules:
 - apiGroups:
@@ -251,7 +267,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
   namespace: ingress-nginx
 roleRef:
@@ -271,7 +287,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
   namespace: ingress-nginx
 roleRef:
@@ -290,7 +306,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -309,7 +325,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -330,7 +346,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller
   namespace: ingress-nginx
 ---
@@ -344,11 +360,14 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
   externalTrafficPolicy: Local
+  ipFamilies:
+  - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
   - appProtocol: http
     name: http
@@ -374,7 +393,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller-admission
   namespace: ingress-nginx
 spec:
@@ -397,7 +416,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
@@ -438,7 +457,7 @@ spec:
               fieldPath: metadata.namespace
         - name: LD_PRELOAD
           value: /usr/local/lib/libmimalloc.so
-        image: registry.k8s.io/ingress-nginx/controller:v1.3.0@sha256:d1707ca76d3b044ab8a28277a2466a02100ee9f58a86af1535a3edf9323ea1b5
+        image: registry.k8s.io/ingress-nginx/controller:v1.4.0@sha256:34ee929b111ffc7aa426ffd409af44da48e5a0eea1eb2207994d9e0c0882d143
         imagePullPolicy: IfNotPresent
         lifecycle:
           preStop:
@@ -510,7 +529,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission-create
   namespace: ingress-nginx
 spec:
@@ -521,7 +540,7 @@ spec:
         app.kubernetes.io/instance: ingress-nginx
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/part-of: ingress-nginx
-        app.kubernetes.io/version: 1.3.0
+        app.kubernetes.io/version: 1.4.0
       name: ingress-nginx-admission-create
     spec:
       containers:
@@ -535,7 +554,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
+        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v20220916-gd32f8c343@sha256:39c5b2e3310dc4264d638ad28d9d1d96c4cbb2b2dcfb52368fe4e3c63f61e10f
         imagePullPolicy: IfNotPresent
         name: create
         securityContext:
@@ -557,7 +576,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission-patch
   namespace: ingress-nginx
 spec:
@@ -568,7 +587,7 @@ spec:
         app.kubernetes.io/instance: ingress-nginx
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/part-of: ingress-nginx
-        app.kubernetes.io/version: 1.3.0
+        app.kubernetes.io/version: 1.4.0
       name: ingress-nginx-admission-patch
     spec:
       containers:
@@ -584,7 +603,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
+        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v20220916-gd32f8c343@sha256:39c5b2e3310dc4264d638ad28d9d1d96c4cbb2b2dcfb52368fe4e3c63f61e10f
         imagePullPolicy: IfNotPresent
         name: patch
         securityContext:
@@ -606,7 +625,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: nginx
 spec:
   controller: k8s.io/ingress-nginx
@@ -619,7 +638,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
 webhooks:
 - admissionReviewVersions:
