feat(stage2): install reflector to sync secrets
this step will install reflector and create secrets then sync to appropriate namespaces

--- a/kubernetes/infrastructure/kustomization.yaml
+++ b/kubernetes/infrastructure/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - reloader
 - csi-secrets-driver  # cannot get consistent install via k8s manifests & helm wont work
 - azure-secrets
+- secrets-sync # central location of creds and synced to where needed
 - cert-manager
 - metallb
 - ingress
