feat: apply correct currency for energy costing

--- a/kubernetes/apps/home-automation/home-assistant/configuration-configmap.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/configuration-configmap.yaml
@@ -6,6 +6,9 @@ metadata:
 data:
   configuration.yaml: |-
     # Configure a default setup of Home Assistant (frontend, api, etc)
+    homeassistant:
+      currency: AUD
+    
     default_config:
 
     http:
