--- a/kubernetes/apps/downloads/jdownloader/jdownloader-nfs-downloads.yaml
+++ b/kubernetes/apps/downloads/jdownloader/jdownloader-nfs-downloads.yaml
@@ -7,7 +7,7 @@ spec:
   capacity:
     storage: 500G
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   nfs:
     path: /shares/downloads/jdownloader
     server: ${NAS_IP}
@@ -21,7 +21,7 @@ spec:
   storageClassName: ""
   volumeName: jdownloader-downloads-pv
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 500G
