--- a/kubernetes/apps/media/bazarr/bazarr-nfs-tvshows.yaml
+++ b/kubernetes/apps/media/bazarr/bazarr-nfs-tvshows.yaml
@@ -7,11 +7,11 @@ spec:
   capacity:
     storage: 2000G
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   nfs:
     path: /shares/tvshows
     server: ${NAS_IP}
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Delete
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,7 +22,7 @@ spec:
   storageClassName: ""
   volumeName: bazarr-tvshows-pv
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 2000G
