--- a/kubernetes/apps/unifi/unifi-deploy.yaml
+++ b/kubernetes/apps/unifi/unifi-deploy.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: unifi
   namespace: unifi
 spec:
+  serviceName: unifi
   replicas: 1
   selector:
     matchLabels:
