--- a/kubernetes/apps/home-automation/home-assistant/hass-volume.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/hass-volume.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hass-volume
   namespace: longhorn-system
 spec:
-  accessMode: rwx
+  accessMode: rwo
   engineImage: longhornio/longhorn-engine:v1.3.2
   frontend: blockdev
   replicaAutoBalance: best-effort
@@ -16,7 +16,7 @@ metadata:
   name: hass-volume-pv
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   capacity:
     storage: 1Gi
   csi:
@@ -34,7 +34,7 @@ metadata:
   namespace: home-automation
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
