--- a/bare-metal/inventory/inventory-develop.yml
+++ b/bare-metal/inventory/inventory-develop.yml
@@ -6,7 +6,8 @@ localhost:
     ansible_connection: local
     branch: ingress-metallb
     target_path: kubernetes/clusters/develop
-    github_token:
+    kv_url: 'https://chickenwaffles-vault-dev.vault.azure.net/'
+    github_token: "{{ lookup('azure_keyvault_secret', 'github-token', vault_url=kv_url) }}"
 
 k3s_cluster:
   hosts:
@@ -19,4 +20,7 @@ k3s_cluster:
     ansible_connection: paramiko # don't need to apt-get sshpass
     ansible_user: colin
     ansible_python_interpreter: /usr/bin/python3
+    nut_controller_address: 192.168.0.225
     k3s_registration_address: 192.168.0.8
+    kv_url: 'https://chickenwaffles-vault-dev.vault.azure.net/'
+    nut_user_subscriber_password: "{{ lookup('azure_keyvault_secret', 'nut-user-subscriber-password', vault_url=kv_url) }}"
