--- a/bare-metal/requirements-frozen.txt
+++ b/bare-metal/requirements-frozen.txt
@@ -1,14 +1,29 @@
 ansible-core==2.13.5
 bcrypt==4.0.1
+cachetools==5.2.0
+certifi==2022.9.24
 cffi==1.15.1
-cryptography==38.0.1
+charset-normalizer==2.1.1
+cryptography==38.0.3
+google-auth==2.14.1
+idna==3.4
 Jinja2==3.1.2
+kubernetes==25.3.0
 MarkupSafe==2.1.1
+oauthlib==3.2.2
 packaging==21.3
 paramiko==2.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 PyNaCl==1.5.0
 pyparsing==3.0.9
+python-dateutil==2.8.2
 PyYAML==6.0
+requests==2.28.1
+requests-oauthlib==1.3.1
 resolvelib==0.8.1
+rsa==4.9
 six==1.16.0
+urllib3==1.26.12
+websocket-client==1.4.2
