--- a/bare-metal/requirements.txt
+++ b/bare-metal/requirements.txt
@@ -1,2 +1,14 @@
 ansible-core==2.13.5
+kubernetes==25.3.0
 paramiko==2.11.0
+
+# azure-keyvault requirements
+packaging==21.3
+requests[security]==2.28.1
+xmltodict==0.13.0
+azure-cli-core==2.34.0
+azure-common==1.1.11
+azure-identity==1.7.0
+azure-keyvault==1.1.0
+msrest==0.7.1
+msrestazure==0.6.4
