--- a/bare-metal/requirements.yml
+++ b/bare-metal/requirements.yml
@@ -10,3 +10,6 @@ collections:
   - name: ansible.posix
     version: 1.4.0
     source: https://galaxy.ansible.com
+  - name: kubernetes.core
+    version: 2.3.2
+    source: https://galaxy.ansible.com
