--- a/kubernetes/infrastructure/cert-manager/issuer.yaml
+++ b/kubernetes/infrastructure/cert-manager/issuer.yaml
@@ -12,4 +12,4 @@ spec:
         cloudflare:
           apiTokenSecretRef:
             name: cloudflare-api-token
-            key: api-token
+            key: CF_API_TOKEN
